homework 5. fix errors